# ifrs9-ecl-framework

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.yaml  settings.py
docs/: STAGE10_STAGING.md  STAGE11_SCENARIO.md  STAGE12_ECL.md  STAGE13_VALIDATION.md  STAGE14_MONITORING.md  STAGE15_DASHBOARD.md  STAGE1_INGESTION.md  STAGE2_QUALITY.md  STAGE3_EDA.md  STAGE4_FEATURES.md  STAGE5_PD.md  STAGE6_PIT.md  STAGE7_PREPAY.md  STAGE8_LGD.md  STAGE9_EAD.md
models/: ead_model.json  ecl_results.json  lgd_model.joblib  lgd_stats.json  macro_to_z.joblib  monitoring_results.json  pd_calibrator_isotonic.joblib  pd_lightgbm.joblib  pd_metrics.json  pd_scorecard_logreg.joblib  pd_xgboost.joblib  pit_artifacts.json  pp_lightgbm.joblib  pp_metrics.json  pp_scorecard_logreg.joblib  pp_woe_maps.pkl  pp_xgboost.joblib  scenario_artifacts.json  staging_artifacts.json  validation_results.json  woe_maps.pkl
src/dashboard/: app.py  loaders.py
src/ead_model/: amortization.py  ead_data.py  ead_model.py  run_ead.py
src/ecl_engine/: ecl.py  ecl_data.py  run_ecl.py  term_structure.py
src/eda/: plots.py  queries.py  run_eda.py
src/feature_engineering/: feature_store.py  macro.py  run_features.py  transforms.py
src/ingestion/: csv_to_parquet.py  (+6 more)
tests/: make_synthetic_fannie.py  test_dashboard.py  test_ead.py  test_ecl.py  test_eda.py  test_features.py  test_lgd.py  test_monitoring.py  test_pd.py  test_pit.py  test_prepay.py  test_quality.py  test_scenarios.py  test_smoke.py  test_staging.py  test_validation.py
(+36 files in other folders)
