[project]
name = "ifrs9-ecl"
version = "0.1.0"
description = "End-to-end IFRS 9 Expected Credit Loss framework on Fannie Mae mortgage data"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"
